--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   },
   "dependencies": {
     "next": "12.1.5",
+    "ramda": "^0.28.0",
     "react": "18.0.0",
     "react-dom": "18.0.0"
   },
   "devDependencies": {
     "@types/node": "17.0.24",
+    "@types/ramda": "^0.28.11",
     "@types/react": "18.0.5",
     "@types/react-dom": "18.0.1",
     "autoprefixer": "^10.4.4",
